--- a/signup.html
+++ b/signup.html
@@ -1,144 +1,142 @@
-<!-- signup.html (final polished version) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sign Up - Finance Point</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore-compat.js"></script>
-
+  <title>Finance Point - Sign Up</title>
   <style>
-    .login-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      max-width: 400px;
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
     }
-
-    .login-box {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      border-radius: 15px;
+    .container {
+      background: rgba(0,0,0,0.75);
       padding: 2rem;
-      box-shadow: 0 0 20px rgba(255, 215, 0, 0.1);
-      text-align: center;
-      color: #fff;
+      border-radius: 10px;
+      width: 320px;
+      box-shadow: 0 0 15px rgba(255,255,255,0.2);
     }
-
-    .login-box h2 {
+    h2 {
       margin-bottom: 1rem;
-      color: gold;
+      text-align: center;
     }
-
-    .login-box input {
+    input {
       width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 5px;
       border: none;
-      border-radius: 8px;
-      background-color: #1f1f1f;
-      color: #fff;
+      font-size: 1rem;
     }
-
-    .login-box button {
+    button {
+      margin-top: 15px;
       width: 100%;
-      padding: 0.7rem;
-      background-color: gold;
-      color: #000;
+      padding: 10px;
+      background-color: #ffb700;
       border: none;
-      border-radius: 8px;
+      border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
-      margin-top: 0.5rem;
+      color: #000;
+      font-size: 1.1rem;
     }
-
-    .switch {
-      margin-top: 1rem;
+    button:hover {
+      background-color: #ffa500;
+    }
+    .link {
+      margin-top: 10px;
+      text-align: center;
       font-size: 0.9rem;
-      color: #ccc;
     }
-
-    .switch a:hover {
-      color: gold;
+    .link a {
+      color: #ffb700;
+      text-decoration: none;
     }
-
-    #message {
-      margin-top: 1rem;
-      color: #f99;
-      font-size: 0.9rem;
+    .error {
+      margin-top: 10px;
+      color: #ff4d4d;
+      font-weight: bold;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div id="particles-js"></div>
 
-  <div class="login-container">
-    <div class="login-box">
-      <h2>Finance Point Sign Up</h2>
-
-      <form id="signup-form">
-        <input type="text" id="fullName" placeholder="Full Name" required />
-        <input type="text" id="matricNumber" placeholder="Matric Number" required />
-        <input type="email" id="email" placeholder="Email" required />
-        <input type="password" id="password" placeholder="Password" required />
-        <button type="submit">Create Account</button>
-      </form>
-
-      <p class="switch">Already have an account? <a href="login.html">Login</a></p>
-      <p id="message"></p>
-    </div>
+<div class="container">
+  <h2>Create Account</h2>
+  <input type="text" id="fullName" placeholder="Full Name" required />
+  <input type="text" id="matricNumber" placeholder="Matric Number" required />
+  <input type="email" id="email" placeholder="Email" required />
+  <input type="password" id="password" placeholder="Password" required />
+  <button id="signupBtn">Sign Up</button>
+  <div class="link">
+    Already have an account? <a href="login.html">Login</a>
   </div>
+  <div class="error" id="error"></div>
+</div>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-      authDomain: "finsa-connect.firebaseapp.com",
-      projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebasestorage.app",
-      messagingSenderId: "126845965255",
-      appId: "1:126845965255:web:c82539297a8464873d7fe2"
-    };
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
+  import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+  const firebaseConfig = {
+    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+    authDomain: "finsa-connect.firebaseapp.com",
+    projectId: "finsa-connect",
+    storageBucket: "finsa-connect.firebasestorage.app",
+    messagingSenderId: "126845965255",
+    appId: "1:126845965255:web:c82539297a8464873d7fe2"
+  };
 
-    document.getElementById("signup-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
-      const fullName = document.getElementById("fullName").value;
-      const matricNumber = document.getElementById("matricNumber").value;
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+  const fullName = document.getElementById("fullName");
+  const matricNumber = document.getElementById("matricNumber");
+  const email = document.getElementById("email");
+  const password = document.getElementById("password");
+  const signupBtn = document.getElementById("signupBtn");
+  const errorDiv = document.getElementById("error");
 
-      try {
-        const userCredential = await auth.createUserWithEmailAndPassword(email, password);
-        const uid = userCredential.user.uid;
+  signupBtn.addEventListener("click", async () => {
+    const name = fullName.value.trim();
+    const matric = matricNumber.value.trim();
+    const userEmail = email.value.trim();
+    const userPassword = password.value.trim();
 
-        await db.collection("users").doc(uid).set({
-          fullName,
-          matricNumber,
-          email,
-          createdAt: firebase.firestore.FieldValue.serverTimestamp()
-        });
+    if (!name || !matric || !userEmail || !userPassword) {
+      errorDiv.textContent = "Please fill in all fields.";
+      return;
+    }
 
-        document.getElementById("message").innerText = "Sign-up successful!";
-        window.location.href = "dashboard.html";
-      } catch (error) {
-        document.getElementById("message").innerText = error.message;
-      }
-    });
-  </script>
+    try {
+      const userCredential = await createUserWithEmailAndPassword(auth, userEmail, userPassword);
+      const user = userCredential.user;
 
-  <script src="particles-config.js"></script>
+      await setDoc(doc(db, "users", user.uid), {
+        fullName: name,
+        matricNumber: matric,
+        email: userEmail,
+        admin: false,
+        createdAt: serverTimestamp()
+      });
+
+      // Redirect to dashboard
+      window.location.href = "dashboard.html";
+    } catch (err) {
+      errorDiv.textContent = err.message;
+    }
+  });
+</script>
+
 </body>
 </html>
