--- a/dashboard.html
+++ b/dashboard.html
@@ -1,115 +1,342 @@
-<!-- dashboard.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Finance Point Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Finance Point - Admin Panel</title>
+<style>
+  /* Background + font */
+  body, html {
+    margin: 0; padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    min-height: 100vh;
+    background: url('https://cdn.jsdelivr.net/gh/VincentGarreau/particles.js/assets/img/background3.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: white;
+  }
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  header {
+    background: rgba(255, 183, 0, 0.95);
+    color: #000;
+    padding: 1rem 2rem;
+    font-weight: bold;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-  <!-- Style -->
-  <link rel="stylesheet" href="style.css" />
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    background: rgba(32, 58, 67, 0.9);
+    padding: 0.5rem 1rem;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore-compat.js"></script>
+  nav button.tab-btn {
+    background: none;
+    border: none;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background 0.3s;
+    border-radius: 4px;
+    min-width: 100px;
+  }
+  nav button.tab-btn:hover,
+  nav button.tab-btn.active {
+    background: #ffb700;
+    color: #000;
+    font-weight: bold;
+  }
 
-  <!-- Particles.js -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  /* Logout below nav */
+  #logoutWrapper {
+    display: flex;
+    justify-content: center;
+    background: rgba(32, 58, 67, 0.9);
+    padding: 0.75rem 0;
+  }
+  #logoutBtn {
+    background: #ff4d4d;
+    border: none;
+    color: white;
+    padding: 0.75rem 2rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background 0.3s ease;
+    max-width: 300px;
+    width: 100%;
+  }
+  #logoutBtn:hover {
+    background: #ff0000;
+  }
+
+  main {
+    padding: 1rem 2rem;
+    background: rgba(0,0,0,0.4);
+    min-height: calc(100vh - 160px);
+    overflow-y: auto;
+  }
+
+  section {
+    display: none;
+  }
+  section.active {
+    display: block;
+  }
+
+  label {
+    display: block;
+    margin: 1rem 0 0.3rem;
+  }
+  input, textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: none;
+    font-size: 1rem;
+  }
+  button.submit-btn {
+    margin-top: 1rem;
+    background: #ffb700;
+    color: #000;
+    border: none;
+    padding: 0.7rem 1.2rem;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+  }
+  button.submit-btn:hover {
+    background: #ffa500;
+  }
+
+  .message {
+    margin-top: 1rem;
+    font-weight: bold;
+    color: #ffb700;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 1rem;
+  }
+  ul li {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 0.7rem;
+    margin-bottom: 0.5rem;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  ul li button {
+    background: #ffb700;
+    border: none;
+    padding: 0.3rem 0.7rem;
+    margin-left: 5px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-weight: bold;
+    color: #000;
+    transition: background 0.3s ease;
+  }
+  ul li button:hover {
+    background: #ffa500;
+  }
+  ul li span.status {
+    font-weight: bold;
+    margin-left: 10px;
+  }
+  ul li span.status.active {
+    color: lightgreen;
+  }
+  ul li span.status.blocked {
+    color: red;
+  }
+</style>
 </head>
 <body>
-  <!-- Particles background -->
-  <div id="particles-js"></div>
 
-  <!-- Top Nav -->
-  <header class="topnav">
-    <h1>Finance Point</h1>
-    <div class="user-info">
-      <span id="user-name">Loading...</span>
-      <button id="logout-btn">Logout</button>
-    </div>
-  </header>
+<header>Finance Point Admin Panel</header>
 
-  <!-- Sidebar -->
-  <nav class="sidebar">
-    <ul>
-      <li><a href="announcements.html">📢 Announcements</a></li>
-      <li><a href="events.html">📅 Events</a></li>
-      <li><a href="executives.html">👥 Executives</a></li>
-      <li><a href="downloads.html">📥 Downloads</a></li>
-      <li><a href="quiz.html">🧠 Quiz of the Week</a></li>
-      <li><a href="birthday.html">🎂 Birthday Wall</a></li>
-      <li><a href="lost-found.html">📦 Lost & Found</a></li>
-      <li><a href="feedback.html">📣 Feedback Box</a></li>
-      <li><a href="tips.html">💡 Finance Tips</a></li>
-    </ul>
-  </nav>
+<nav>
+  <button class="tab-btn active" data-target="executives">Executives</button>
+  <button class="tab-btn" data-target="announcements">Announcements</button>
+  <button class="tab-btn" data-target="events">Events</button>
+  <button class="tab-btn" data-target="users">Users</button>
+  <button class="tab-btn" data-target="birthdayWall">Birthday Wall</button>
+  <button class="tab-btn" data-target="lostAndFound">Lost & Found</button>
+  <button class="tab-btn" data-target="feedbackBox">Feedback Box</button>
+  <button class="tab-btn" data-target="studyResources">Study Resources</button>
+</nav>
 
-  <!-- Main Dashboard -->
-  <main class="dashboard-content">
-    <h2 id="greeting">Welcome!</h2>
-    <p><strong>Matric Number:</strong> <span id="matric-number">...</span></p>
-    <p><strong>Email:</strong> <span id="user-email">...</span></p>
+<div id="logoutWrapper">
+  <button id="logoutBtn">Logout</button>
+</div>
 
-    <div class="card">
-      <h3>📊 Finance Fact of the Day</h3>
-      <p id="fact">Money is not the root of all evil — the *love* of money is. 😉</p>
-    </div>
+<main>
 
-    <div class="card">
-      <h3>📰 Quick Tip</h3>
-      <p>Budgeting is telling your money where to go, not wondering where it went.</p>
-    </div>
+  <!-- Executives -->
+  <section id="executives" class="active">
+    <h2>Manage Executives</h2>
+    <label for="execName">Name:</label>
+    <input type="text" id="execName" placeholder="Executive Name" />
+    <label for="execRole">Role:</label>
+    <input type="text" id="execRole" placeholder="Role (e.g. President)" />
+    <button class="submit-btn" id="addExecBtn">Add Executive</button>
+    <div id="execMessage" class="message"></div>
+    <ul id="execList"></ul>
+  </section>
 
-    <div class="card">
-      <h3>📢 Latest Announcement</h3>
-      <p>New Finance Challenge begins next week. Stay tuned!</p>
-    </div>
-  </main>
+  <!-- Announcements -->
+  <section id="announcements">
+    <h2>Manage Announcements</h2>
+    <label for="announcementText">Announcement:</label>
+    <textarea id="announcementText" rows="3" placeholder="Write announcement here"></textarea>
+    <button class="submit-btn" id="addAnnouncementBtn">Add Announcement</button>
+    <div id="announcementMessage" class="message"></div>
+    <ul id="announcementList"></ul>
+  </section>
 
-  <!-- Firebase Config -->
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-      authDomain: "finsa-connect.firebaseapp.com",
-      projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebasestorage.app",
-      messagingSenderId: "126845965255",
-      appId: "1:126845965255:web:c82539297a8464873d7fe2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-  </script>
+  <!-- Events -->
+  <section id="events">
+    <h2>Manage Events</h2>
+    <label for="eventTitle">Title:</label>
+    <input type="text" id="eventTitle" placeholder="Event Title" />
+    <label for="eventDate">Date:</label>
+    <input type="date" id="eventDate" />
+    <button class="submit-btn" id="addEventBtn">Add Event</button>
+    <div id="eventMessage" class="message"></div>
+    <ul id="eventList"></ul>
+  </section>
 
-  <!-- Auth & Data Script -->
-  <script>
-    auth.onAuthStateChanged(async (user) => {
-      if (!user) {
+  <!-- Users -->
+  <section id="users">
+    <h2>Registered Users</h2>
+    <ul id="userList"></ul>
+    <div id="userMessage" class="message"></div>
+  </section>
+
+  <!-- Birthday Wall -->
+  <section id="birthdayWall">
+    <h2>Birthday Wall</h2>
+    <label for="birthdayName">Name:</label>
+    <input type="text" id="birthdayName" placeholder="Name" />
+    <label for="birthdayDate">Birthday (YYYY-MM-DD):</label>
+    <input type="date" id="birthdayDate" />
+    <button class="submit-btn" id="addBirthdayBtn">Add Birthday</button>
+    <div id="birthdayMessage" class="message"></div>
+    <ul id="birthdayList"></ul>
+  </section>
+
+  <!-- Lost and Found -->
+  <section id="lostAndFound">
+    <h2>Lost & Found</h2>
+    <label for="lostItem">Item Name:</label>
+    <input type="text" id="lostItem" placeholder="Item Name" />
+    <label for="lostDescription">Description:</label>
+    <textarea id="lostDescription" rows="3" placeholder="Description"></textarea>
+    <button class="submit-btn" id="addLostBtn">Add Lost Item</button>
+    <div id="lostMessage" class="message"></div>
+    <ul id="lostList"></ul>
+  </section>
+
+  <!-- Feedback Box -->
+  <section id="feedbackBox">
+    <h2>Feedback Box</h2>
+    <label for="feedbackText">Feedback:</label>
+    <textarea id="feedbackText" rows="4" placeholder="Write feedback here"></textarea>
+    <button class="submit-btn" id="addFeedbackBtn">Submit Feedback</button>
+    <div id="feedbackMessage" class="message"></div>
+    <ul id="feedbackList"></ul>
+  </section>
+
+  <!-- Study Resources -->
+  <section id="studyResources">
+    <h2>Study Resources</h2>
+    <label for="resourceTitle">Title:</label>
+    <input type="text" id="resourceTitle" placeholder="Resource Title" />
+    <label for="resourceLink">Link:</label>
+    <input type="url" id="resourceLink" placeholder="URL" />
+    <button class="submit-btn" id="addResourceBtn">Add Resource</button>
+    <div id="resourceMessage" class="message"></div>
+    <ul id="resourceList"></ul>
+  </section>
+
+</main>
+
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+  import {
+    getAuth, signOut, onAuthStateChanged
+  } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
+  import {
+    getFirestore,
+    collection, addDoc, getDocs, deleteDoc, doc, onSnapshot
+  } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+    authDomain: "finsa-connect.firebaseapp.com",
+    projectId: "finsa-connect",
+    storageBucket: "finsa-connect.firebasestorage.app",
+    messagingSenderId: "126845965255",
+    appId: "1:126845965255:web:c82539297a8464873d7fe2"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
+
+  // Admin auth check
+  onAuthStateChanged(auth, async (user) => {
+    if (user) {
+      const userDoc = doc(db, "users", user.uid);
+      const userSnap = await getDocs(collection(db, "users"));
+      const currentUser = userSnap.docs.find(d => d.id === user.uid)?.data();
+
+      if (!currentUser || !currentUser.admin) {
+        alert("Access denied: Admins only.");
+        await signOut(auth);
         window.location.href = "login.html";
-        return;
       }
+    } else {
+      window.location.href = "login.html";
+    }
+  });
 
-      const doc = await db.collection("users").doc(user.uid).get();
-      const data = doc.data();
+  // Logout event
+  document.getElementById('logoutBtn').addEventListener('click', async () => {
+    await signOut(auth);
+    window.location.href = "login.html";
+  });
 
-      document.getElementById("user-name").innerText = data.fullName || "Student";
-      document.getElementById("greeting").innerText = `Welcome, ${data.fullName || "Student"}!`;
-      document.getElementById("matric-number").innerText = data.matricNumber || "N/A";
-      document.getElementById("user-email").innerText = user.email;
+  // Tabs functionality
+  const tabButtons = document.querySelectorAll('.tab-btn');
+  const sections = document.querySelectorAll('main section');
+  tabButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      tabButtons.forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      const target = btn.getAttribute('data-target');
+      sections.forEach(sec => sec.classList.toggle('active', sec.id === target));
     });
+  });
 
-    document.getElementById("logout-btn").addEventListener("click", () => {
-      auth.signOut().then(() => {
-        window.location.href = "login.html";
-      });
-    });
-  </script>
+  // === Executives ===
+  const execList = document.getElementById('execList');
+  const execNameInput = document.getElementById('execName');
+  const execRoleInput = document.getElementById('execRole');
+  const execMessage = document.getElementById('execMessage');
+  const execCollection = collection(db, "executives");
 
-  <!-- Particles Config -->
-  <script src="particles-config.js"></script>
-</body>
-</html>
+  function clear
